# recount_code_screen

./: .gitignore  README.md  main.py  pyproject.toml  setup.py
recount_code_screen/: main.py
recount_code_screen/model/: phone_crawler.py
tests/: test_crawling.py  test_data_formatting.py  test_scraping.py
