[tool.poetry]
name = "recount_code_screen"
version = "0.1.0"
description = ""
authors = ["Benjamin Less <beanless12@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.26.0"
beautifulsoup4 = "^4.9.3"
pytest = "^6.2.4"
click = "^8.0.1"
wheel = "^0.37.0"
setuptools = "^57.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
